# Perspicuos

./: .gitignore  CMakeLists.txt
include/: config.h  dbms.h  os_type.h  query_parser.h  storage.h  transaction.h  util.c .h
src/: config.c  dbms.c  main.c  os_type.c  query_parser.c  storage.c  transaction.c  util.c .c
